# inspektor-gadget

./: .clang-format  .dockerignore  .gitignore  .golangci.yml  .krew.yaml  .nfpm_template.yaml  .semgrep_rules.yaml  ADOPTERS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MAINTAINERS.md  Makefile  Makefile.btfgen  README.md  Tiltfile  artifacthub-repo.yml  bpf.mk  crd.mk  cuda-driver-hold.yaml  docs-config.yaml  gadget-core.Dockerfile  gadget-default.Dockerfile  gadget-local.Dockerfile  gadget.Dockerfile  gadget.core.Dockerfile  go.mod  go.sum  go.work  go.work.sum  kubectl-gadget.Dockerfile  local-gadget-linux-arm64.Dockerfile  local-gadget.Dockerfile  minikube.mk  package-lock.json  patch.diff  tests.mk  trace_cuda  trivy.yaml
.circleci/: config.yml
.github/: copilot-instructions.md  dependabot.yml  release.yml
.vex/: golang.vex.json  v0.41.0.vex.json  v0.42.0.vex.json
Dockerfiles/: ebpf-builder.Dockerfile  gadget-bcc.Dockerfile  gadget-bcc.Dockerfile.dockerignore  gadget-builder.Dockerfile  gadget-core.Dockerfile  gadget-core.Dockerfile.dockerignore  gadget-default.Dockerfile  gadget-default.Dockerfile.dockerignore  gadget.Dockerfile  gadget.Dockerfile.dockerignore  gpu-ebpf-bridge.Dockerfile  ig-builder.Dockerfile  ig-tests-all.Dockerfile  ig-tests.Dockerfile  ig-tests.Dockerfile.dockerignore  ig.Dockerfile  ig.dockerignore  kubectl-gadget.Dockerfile  kubectl-gadget.Dockerfile.dockerignore  linter.Dockerfile  (+5 more)
gadgets/trace_cuda/cupti/: CMakeLists.txt  README.md  correlation.cpp  correlation.h  cupti_tracer.c  toolchain-arm64.cmake
(+3876 files in other folders)
